# atgtools

./: .gitignore  Makefile  README.md  pyproject.toml
atgtools/: atg.py  richard.py  theme.ini
tests/: test_atgtools.py
