[tool.poetry]
name = "atgtools"
version = "0.1.2"
description = ""
authors = ["@zorbax"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
atg = 'atgtools.atg:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
